# mariadb-connector-cpp

./: .gitignore  .gitmodules  .travis.yml  BUILD.md  CMakeLists.txt  README  README.md  UBSAN.supp  appveyor-download.bat  appveyor.yml  travis.sh
.github/workflows/: ci.yml
.travis/: docker-compose.yml  gen-ssl.sh  maxscale-compose.yml  osx.sh  script.sh  windows.sh
benchmark/: README.md  build.sh  launch.sh  main-benchmark.cc
class/: BinRow.cpp  BinRow.h  ClientPrepareResult.cpp  ClientPrepareResult.h  ClientSidePreparedStatement.cpp  ClientSidePreparedStatement.h  CmdInformationBatch.cpp  CmdInformationBatch.h  CmdInformationMultiple.cpp  CmdInformationMultiple.h  CmdInformationSingle.cpp  CmdInformationSingle.h  ColumnDefinition.cpp  ColumnDefinition.h  Parameter.cpp  Parameter.h  Protocol.cpp  Protocol.h  ResultSetBin.cpp  ResultSetBin.h  ResultSetMetaData.cpp  ResultSetMetaData.h  ResultSetText.cpp  ResultSetText.h  Results.cpp  Results.h  SQLString.h  SSPSDirectExec.cpp  SSPSDirectExec.h  ServerPrepareResult.cpp  ServerPrepareResult.h  ServerSidePreparedStatement.cpp  ServerSidePreparedStatement.h  TextRow.cpp  TextRow.h  pimpls.h  timer.h  unique_key.cpp  unique_key.h
class/lru/: lrucache.h  pscache.h
cmake/: ConfigureFile.cmake  ConnectorName.cmake  SetValueMacro.cmake  build_depends.cmake  check_compiler_flag.cmake  connector_c.cmake  external_connector_c.cmake  install.cmake  options_defaults.cmake  packaging.cmake
include/: CArray.h  CMakeLists.txt  CallableStatement.h  ConnCpp.h  Connection.h  DatabaseMetaData.h  Driver.h  DriverManager.h  Exception.h  MariaDbDataSource.hpp  ParameterMetaData.h  PreparedStatement.h  ResultSet.h  ResultSetMetaData.h  SQLString.h  Savepoint.h  Statement.h  Types.h  Warning.h  conncpp.hpp  jdbccompat.h
include/conncpp/: CArray.hpp  CallableStatement.hpp  Connection.hpp  DatabaseMetaData.hpp  Date.hpp  Driver.hpp  DriverManager.hpp  Exception.hpp  List.hpp  ParameterMetaData.hpp  PooledConnection.hpp  PreparedStatement.hpp  Properties.hpp  ResultSet.hpp  SQLString.hpp  Time.hpp  Timestamp.hpp  XAConnection.hpp  buildconf.hpp  jdbccompat.hpp
include/conncpp/compat/: XAResource.hpp
install_test/: CMakeLists.txt.in  example.cpp
interface/: CmdInformation.h  Exception.cpp  Exception.h  PrepareResult.cpp  PrepareResult.h  PreparedStatement.cpp  PreparedStatement.h  ResultSet.cpp  ResultSet.h  Row.cpp  Row.h
osxinstall/: postinstall
osxinstall/resources/: README.html  WELCOME.html.in
src/: BasePrepareStatement.cpp  BasePrepareStatement.h  CArray.cpp  CArrayImp.h  CallParameter.cpp  CallParameter.h  CallableParameterMetaData.cpp  CallableParameterMetaData.h  Charset.cpp  Charset.h  ClientSidePreparedStatement.cpp  ClientSidePreparedStatement.h  ColumnDefinition.cpp  ColumnDefinition.h  ColumnType.cpp  ColumnType.h  Consts.cpp  Consts.h  Dll.c  DriverManager.cpp  ExceptionFactory.cpp  ExceptionFactory.h  ExceptionMapper.cpp  ExceptionMapper.h  HostAddress.cpp  HostAddress.h  Identifier.cpp  Identifier.h  List.cpp  ListImp.h  Listener.h  MariaDBException.cpp  MariaDBException.h  MariaDBWarning.cpp  MariaDBWarning.h  MariaDbConnCpp.h  MariaDbConnection.cpp  MariaDbConnection.h  MariaDbDataSource.cpp  MariaDbDataSourceInternal.h  (+45 more)
src/cache/: CallableStatementCache.cpp  CallableStatementCache.h  CallableStatementCacheKey.cpp  CallableStatementCacheKey.h
src/com/: CmdInformation.h  CmdInformationBatch.cpp  CmdInformationBatch.h  CmdInformationMultiple.cpp  CmdInformationMultiple.h  CmdInformationSingle.cpp  CmdInformationSingle.h  ColumnDefinitionPacket.cpp  ColumnDefinitionPacket.h  ColumnNameMap.cpp  ColumnNameMap.h  Packet.cpp  Packet.h  RowProtocol.cpp  RowProtocol.h  SelectResultSetPacket.cpp  SelectResultSetPacket.h
src/credential/: Credential.cpp  Credential.h  CredentialPlugin.h  CredentialPluginLoader.cpp  CredentialPluginLoader.h
src/failover/: FailoverProxy.cpp  FailoverProxy.h
src/io/: PacketInputStream.h  PacketOutputStream.h  SocketHandlerFunction.h  StandardPacketInputStream.cpp  StandardPacketInputStream.h
src/jdbccompat/: Date.cpp  Date.h  Time.cpp  Time.h  Timestamp.cpp  Timestamp.h
src/logger/: Logger.h  LoggerFactory.cpp  LoggerFactory.h  NoLogger.cpp  NoLogger.h  ProtocolLoggingProxy.cpp  ProtocolLoggingProxy.h  SimpleLogger.cpp  SimpleLogger.h
src/options/: DefaultOptions.cpp  (+4 more)
template/: CArray.cpp  CArray.h
test/: CMakeLists.txt  driver_test.cpp  static_test.cpp  test_common.cpp  tests_config.h.in
test/CJUnitTestsPort/: BaseTestFixture.cpp  BaseTestFixture.h  CMakeLists.txt  ccpptests.cpp  cts.sql.in  resources.cpp  resources.h  sql.properties
test/CJUnitTestsPort/compliance/: ConnectionTest.cpp  DatabaseMetaDataTest.cpp  DatabaseMetaDataTest.h  PreparedStatementTest.cpp  ResultSetMetadataTest.cpp  StatementTest.cpp  UnbufferedRsStmtTest.cpp
test/CJUnitTestsPort/regression/: BlobRegressionTest.cpp  PreparedStatementRegressionTest.cpp
test/CJUnitTestsPort/simple/: BlobTest.cpp  BlobTest.h  TransactionTest.h
test/common/: ccppTypes.h  singleton.h  stringutils.cpp  stringutils.h
test/framework/: CMakeLists.txt  framework.h  start_options.cpp  start_options.h  test_asserts.cpp  test_asserts.h  test_container.h  test_factory.cpp  test_factory.h  test_filter.cpp  test_filter.h  test_listener.cpp  test_listener.h  test_runner.cpp  test_suite.cpp  test_suite.h  test_tapOutputter.cpp  test_timer.cpp  test_timer.h
test/unit/: CMakeLists.txt  main.cpp  unit_fixture.cpp  unit_fixture.h
test/unit/bugs/: CMakeLists.txt  bugs.cpp  bugs.h
test/unit/classes/: CMakeLists.txt  connection.cpp  connectionmetadata.cpp  connectionmetadata.h  connectiontest.h  parametermetadata.cpp  parametermetadatatest.h  pool.cpp  pool.h  pool2.cpp  pool2.h  preparedstatement.cpp  preparedstatementtest.h  resultset.cpp  resultsetmetadata.cpp  resultsettest.h  savepoint.cpp  statement.cpp  statementtest.h  variant.cpp
test/unit/example/: CMakeLists.txt  example.cpp
test/unit/performance/: CMakeLists.txt  perf_statement.cpp
wininstall/: CMakeLists.txt  binaries_dir.xml.in  mariadb_conncpp.xml.in
(+102 files in other folders)
